提交xmlToApi和jsonToApi